--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,2 @@
-<p>admin works!</p>
+<h5 *ngIf='val.url=="/admin"'>Hi Admin. Please <a routerLink="login">Login</a> to Continue</h5>
+<router-outlet></router-outlet>
