--- a/src/app/professor/professor-dashboard/professor-dashboard.component.html
+++ b/src/app/professor/professor-dashboard/professor-dashboard.component.html
@@ -1,1 +1,10 @@
-<p>professor-dashboard works!</p>
+<mat-tab-group>
+    <mat-tab label="Welcome"> Hi Professor! </mat-tab>
+    <mat-tab label="Link List">
+        <app-link-list></app-link-list>
+    </mat-tab>
+    <mat-tab label="View Messages"> Hi Professor! </mat-tab>
+    <mat-tab label="Update Profile">
+        <app-professor-update></app-professor-update>
+    </mat-tab>
+</mat-tab-group>
