--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,12 @@
-<p>user-dashboard works!</p>
+<mat-tab-group>
+    <mat-tab label="Welcome"> Hi User! </mat-tab>
+    <mat-tab label="Resource List">
+        <app-view-link></app-view-link>
+    </mat-tab>
+    <mat-tab label="Message Professor">
+        <app-send-message></app-send-message>
+    </mat-tab>
+    <mat-tab label="Update Profile">
+        <app-user-update></app-user-update>
+    </mat-tab>
+</mat-tab-group>
