--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,15 @@
-<p>admin-dashboard works!</p>
+<mat-tab-group>
+    <mat-tab label="Welcome"> Hi Admin! </mat-tab>
+    <mat-tab label="User List">
+        <app-user-list></app-user-list>
+    </mat-tab>
+    <mat-tab label="Professor List">
+        <app-professor-list></app-professor-list>
+    </mat-tab>
+    <mat-tab label="Links List">
+        <app-link-list></app-link-list>
+    </mat-tab>
+    <mat-tab label="Message List">
+        <app-message-list></app-message-list>
+    </mat-tab>
+</mat-tab-group>
