--- a/src/app/admin/admin-login/admin-login.component.html
+++ b/src/app/admin/admin-login/admin-login.component.html
@@ -1,1 +1,24 @@
-<p>admin-login works!</p>
+<div class="col-md-4">
+    <div class="login-panel panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Admin Log In</h3>
+        </div>
+        <div class="panel-body">
+            <form role="form" #loginForm="ngForm">
+                <fieldset>
+                    <div class="form-group">
+                        <input class="form-control" placeholder="E-mail" name="emailid" type="email" ngModel required>
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" placeholder="Password" name="password" type="password" ngModel required>
+                    </div>
+
+
+                    <button class="btn btn-sm btn-success" [disabled]="!loginForm.valid" (click)="doAdminLogin(loginForm.value)">Login</button>&nbsp;
+                    <button type="reset" class="btn btn-sm btn-success">Reset</button>
+                    <!--{{data | json }}-->
+                </fieldset>
+            </form>
+        </div>
+    </div>
+</div>
