--- a/src/app/admin/user-list/user-list.component.html
+++ b/src/app/admin/user-list/user-list.component.html
@@ -1,1 +1,29 @@
-<p>user-list works!</p>
+&nbsp;&nbsp;<button class="btn btn-primary" (click)="getUserList()">Refresh</button> &nbsp;
+<ng-container>Last updated: {{refreshedOn|date:"dd-MM-YYYY HH:mm:ss"}}</ng-container>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Contact</th>
+            <th scope="col">University</th>
+            <th scope="col">Dept</th>
+            <th scope="col">Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of list; index as i">
+            <th scope="row">{{ i + 1 }}</th>
+            <td>USER-{{ user.id }}</td>
+            <td>{{ user.name }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ user.contact }}</td>
+            <td>{{ user.university }}</td>
+            <td>{{ user.dept }}</td>
+            <!--<td><button class="btn btn-primary">Update</button></td>-->
+            <td><button class="btn btn-danger" (click)="doDeleteUser(user.id)">Delete</button></td>
+        </tr>
+    </tbody>
+</table>
