--- a/src/app/professor/link-list/link-list.component.html
+++ b/src/app/professor/link-list/link-list.component.html
@@ -1,1 +1,29 @@
-<p>link-list works!</p>
+&nbsp;&nbsp;
+<button class="btn btn-primary" (click)="getLinkList()">
+        Refresh</button> &nbsp;
+<ng-container>Last updated: {{refreshedOn|date:"dd-MM-YYYY HH:mm:ss"}}</ng-container>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">ID</th>
+            <th scope="col">Website</th>
+            <th scope="col">Link ID</th>
+            <th scope="col">Topic ID</th>
+            <th scope="col">Slot No</th>
+            <th scope="col">Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let app of list; index as i">
+            <th scope="row">{{ i + 1 }}</th>
+            <td>APP-{{ app.id }}</td>
+            <td>{{ app.website }}</td>
+            <td>{{ app.link }}</td>
+            <td>{{ app.topic }}</td>
+            <td> <button class="btn btn-danger" (click)="doDeleteLink(app.id)">Delete</button></td>
+
+
+        </tr>
+    </tbody>
+</table>
