--- a/src/app/user/user-update/user-update.component.html
+++ b/src/app/user/user-update/user-update.component.html
@@ -1,1 +1,32 @@
-<p>user-update works!</p>
+<div class="card bg-light">
+    <article class="card-body mx-auto" style="max-width: 400px;">
+        <h4 class="card-title mt-3 text-center">Update Account Details</h4>
+        <form #updateForm="ngForm">
+            <div class="form-group input-group">
+                <input name="name" class="form-control" placeholder="Full name" type="text" ngModel required><br>
+            </div>
+            <div class="form-group input-group">
+                <input name="email" class="form-control" placeholder="Email Address" type="email" ngModel required disabled="true"><br>
+            </div>
+            <div class="form-group input-group">
+                <input name="contact" class="form-control" placeholder="Contact Number" type="tel" ngModel required><br>
+            </div>
+            <div class="form-group input-group">
+                <input name="university" class="form-control" placeholder="University" type="address" ngModel required><br>
+            </div>
+            <div class="form-group input-group">
+                <input name="dept" class="form-control" placeholder="Department" type="text" ngModel required><br>
+            </div>
+            <div class="form-group input-group">
+                <input name="password" class="form-control" placeholder="Enter Password" type="password" ngModel required><br>
+            </div>
+
+
+            <div align="center" *ngIf="!updateForm.valid">Fill all fields to get Submit Button</div>
+            <div class="form-group" *ngIf="updateForm.valid">
+                <button type="submit" class="btn btn-primary btn-block" (click)="doUpdateUser(updateForm.value)" [disabled]="!updateForm.valid"> Update Account  </button>
+                <button type="reset" class="btn btn-primary btn-block">Reset</button>
+            </div>
+        </form>
+    </article>
+</div>
